tests/baselines/reference/jsxJsxsCjsTransformKeyPropCustomImport(jsx=react-jsxdev).errors.txt
jsxJsxsCjsTransformKeyPropCustomImport.tsx(3,11): error TS2875: This JSX tag requires the module path 'preact/jsx-dev-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.


==== jsxJsxsCjsTransformKeyPropCustomImport.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    const props = { answer: 42 }
    const a = <div key="foo" {...props}>text</div>;
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2875: This JSX tag requires the module path 'preact/jsx-dev-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
    const b = <div {...props} key="bar">text</div>;
    
    export {};
    